<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileCustomizationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/abl_profile_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/appbar_mt_profile_custom"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:navigationIconTint="?attr/colorOnBackground" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="32dp"
            android:paddingBottom="64dp">

            <TextView
                android:id="@+id/tv_profile_custom_headline"
                style="@style/TextAppearance.HotelRanking.HeadlineLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/profile_customization"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_profile_custom_title"
                style="@style/TextAppearance.HotelRanking.TitleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/we_provide_hotel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_profile_custom_headline" />

            <TextView
                android:id="@+id/tv_profile_custom_subtitle"
                style="@style/TextAppearance.HotelRanking.BodySmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/required"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_profile_custom_title" />

            <com.c22ho01.hotelranking.customview.ValidateableTextField
                android:id="@+id/vtf_profile_custom_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                app:layout_constraintTop_toBottomOf="@id/tv_profile_custom_subtitle"
                app:validFieldHint="@string/full_name_req"
                app:validFieldRequired="true" />

            <com.c22ho01.hotelranking.customview.ValidateableTextField
                android:id="@+id/vtf_profile_custom_nid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/vtf_profile_custom_name"
                app:validFieldHint="@string/identity_number_req"
                app:validFieldInputType="NUMBER"
                app:validFieldRequired="true" />

            <com.c22ho01.hotelranking.customview.ValidateableTextField
                android:id="@+id/vtf_profile_custom_birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/vtf_profile_custom_nid"
                app:validFieldHint="@string/birth_date_req"
                app:validFieldRequired="true"
                app:validFieldInputType="DATE"
                app:validFieldValidateType="DATE" />

            <TextView
                android:id="@+id/tv_prefer_with_family"
                style="@style/TextAppearance.HotelRanking.BodyLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/prefer_to_go_with_your_family_req"
                app:layout_constraintTop_toBottomOf="@id/vtf_profile_custom_birth_date" />

            <RadioGroup
                android:id="@+id/rg_prefer_with_family"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tv_prefer_with_family">

                <RadioButton
                    android:id="@+id/rb_prefer_with_family_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/rb_prefer_with_family_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="@string/no" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv_select_hobbies"
                style="@style/TextAppearance.HotelRanking.BodyLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/select_hobbies_req"
                app:layout_constraintTop_toBottomOf="@id/rg_prefer_with_family" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_hobbies_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_select_hobbies">

                <com.google.android.material.chip.Chip
                    android:id="@+id/c_hobby"
                    style="@style/Widget.Material3.Chip.Input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selfie"
                    android:visibility="gone"
                    app:chipIcon="@drawable/ic_baseline_camera_alt_24"
                    app:chipIconSize="18dp"
                    app:chipIconTint="?attr/colorPrimary"
                    app:closeIconSize="0dp"
                    app:ensureMinTouchTargetSize="false"
                    tools:visibility="visible" />
            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/tv_select_disabilites"
                style="@style/TextAppearance.HotelRanking.BodyLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/let_us_know_if_you_have_any_special_needs"
                app:layout_constraintTop_toBottomOf="@id/cg_hobbies_group" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cg_disabilities_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_select_disabilites">

                <com.google.android.material.chip.Chip
                    android:id="@+id/c_disability"
                    style="@style/Widget.Material3.Chip.Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/selfie"
                    android:visibility="gone"
                    app:chipIcon="@drawable/ic_baseline_camera_alt_24"
                    app:chipIconSize="18dp"
                    app:chipIconTint="?attr/colorPrimary"
                    app:closeIconSize="0dp"
                    app:ensureMinTouchTargetSize="false"
                    tools:visibility="visible" />
            </com.google.android.material.chip.ChipGroup>

            <Button
                android:id="@+id/btn_save_profile_customization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:enabled="false"
                android:text="@string/save"
                app:layout_constraintTop_toBottomOf="@id/cg_disabilities_group"
                tools:enabled="true" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>