...
                            android:orientation="vertical"
                            app:layout_constraintBottom_toBottomOf="@+id/imgAvatar"
                            app:layout_constraintStart_toEndOf="@+id/imgAvatar"
                            app:layout_constraintTop_toTopOf="@+id/imgAvatar">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tvName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/TextAppearance.HotelRanking.BodyLarge"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toTopOf="@+id/tvEmail"
                                app:layout_constraintStart_toStartOf="@+id/tvEmail"
                                tools:text="Kiki Abdullah" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/tvEmail"
                                android:layout_width="wrap_content"
...
                    android:text="@string/prefer_with_family"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/materialCardView3" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvPrefer"
                    style="@style/TextAppearance.HotelRanking.BodySmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintEnd_toEndOf="@+id/titlePrefer"
...
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tvPrefer"
                    app:layout_constraintTop_toBottomOf="@+id/tvPrefer" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvHobby"
                    style="@style/TextAppearance.HotelRanking.BodySmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
...
                    android:text="@string/special_needs"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintStart_toStartOf="@id/tvPrefer"
                    app:layout_constraintTop_toBottomOf="@id/tvHobby" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvSpecialNeeds"
                    style="@style/TextAppearance.HotelRanking.BodySmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintStart_toStartOf="@+id/titleSpecialNeeds"
                    app:layout_constraintTop_toBottomOf="@+id/titleSpecialNeeds"
                    tools:text="I can't speak easily, I can't hear clearly" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnGoToCustomizeProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="?attr/colorPrimaryContainer"
                    android:text="@string/customize_your_profile"
                    android:textColor="?attr/colorOnPrimaryContainer"
...
